src/test/ui/const-generics/issues/issue-76701-ty-param-in-const.min.stderr
error: generic parameters must not be used inside of non trivial constant values
  --> $DIR/issue-76701-ty-param-in-const.rs:6:46
   |
LL | fn ty_param<T>() -> [u8; std::mem::size_of::<T>()] {
   |                                              ^ non-trivial anonymous constants must not depend on the parameter `T`
   |
   = note: type parameters are currently not permitted in anonymous constants

error: generic parameters must not be used inside of non trivial constant values
  --> $DIR/issue-76701-ty-param-in-const.rs:12:42
   |
LL | fn const_param<const N: usize>() -> [u8; N + 1] {
   |                                          ^ non-trivial anonymous constants must not depend on the parameter `N`
   |
   = help: it is currently only allowed to use either `N` or `{ N }` as generic constants

error: aborting due to 2 previous errors

